<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="LightType" Id="{207b51ff-dbc7-44cb-94fc-1412d877315e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE LightType :
(
	ON := 0,
	FLASH,
	OFF
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>